--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/e9dadf13d3d2ec49cc33413f986a95cb.js";
+      var loaderUrl = buildUrl + "/3197a564af0ee91342bb49616213a05b.js";
       var config = {
-        dataUrl: buildUrl + "/1d1c3d6b9877117ae4b80fa4fb0dc540.data.br",
-        frameworkUrl: buildUrl + "/83b764cd96af84cb294cc14ee1d83d2a.js.br",
-        codeUrl: buildUrl + "/22acd2c967ae88264abe8548deeb849f.wasm.br",
+        dataUrl: buildUrl + "/efb20ab965dfe213490c8beba30f43e8.data.unityweb",
+        frameworkUrl: buildUrl + "/83b764cd96af84cb294cc14ee1d83d2a.js.unityweb",
+        codeUrl: buildUrl + "/22acd2c967ae88264abe8548deeb849f.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "online",
